UtahLiveDataTest/src/objects/PaymentRequest__c.object
<CustomObject>
    <description>[Business] Defines the details of for the Payment request.Payment request is done when award is already awarded and the Grantee wants to make use of the funds</description>
    <fields>
        <fullName>AccountingMethod__c</fullName>
        <defaultValue>&quot;Current Expenditures&quot;</defaultValue>
        <label>Accounting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current Expenditures</fullName>
                </value>
                <value>
                    <fullName>Cumulative Expenditures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdminAwardedAmount__c</fullName>
        <label>Admin Awarded Amount</label>
        <summarizedField>PaymentBudgetCategory__c.AdminAwardedBudget__c</summarizedField>
        <summaryForeignKey>PaymentBudgetCategory__c.PaymentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdminIndirectCumulative__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Indirect Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminIndirectCurrent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Indirect Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminIndirectQ1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Indirect Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminIndirectQ2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Indirect Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminIndirectQ3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Indirect Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminIndirect__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminRequestedAmountthisAction__c</fullName>
        <label>Admin Requested Amount this Action</label>
        <summarizedField>PaymentBudgetCategory__c.AdminRequestedExpenditure__c</summarizedField>
        <summaryForeignKey>PaymentBudgetCategory__c.PaymentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdminRequestedExpense__c</fullName>
        <label>Admin Requested Expense</label>
        <summarizedField>PaymentBudgetCategory__c.AdminRequestedExpenditure__c</summarizedField>
        <summaryForeignKey>PaymentBudgetCategory__c.PaymentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdvanceDeductedthisAction__c</fullName>
        <label>Advance Deducted this Action</label>
        <summarizedField>PaymentBudgetCategory__c.AdvanceApplied__c</summarizedField>
        <summaryForeignKey>PaymentBudgetCategory__c.PaymentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdvancePaymentRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance Payment Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowableCost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allowable Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmountExpended__c</fullName>
        <label>Amount Expended</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <description>This field is used in payment request form.</description>
        <formula>TotalRequestedAmount__c  -  FederalCashRemaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestshDXF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestshDXe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestshDY8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuthorizedFirstName__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedLastName__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedMiddleName__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedPrefix__c</fullName>
        <description>This field is used in payment request form.</description>
        <label>Authorized Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr .</fullName>
                </value>
                <value>
                    <fullName>Mrs .</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Ms .</fullName>
                </value>
                <value>
                    <fullName>Dr .</fullName>
                </value>
                <value>
                    <fullName>Rev .</fullName>
                </value>
                <value>
                    <fullName>Prof .</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizedSuffix__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jr .</fullName>
                </value>
                <value>
                    <fullName>Sr .</fullName>
                </value>
                <value>
                    <fullName>M. D.</fullName>
                </value>
                <value>
                    <fullName>Ph. D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizedTelephone__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized Telephone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedTitle__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardHyper__c</fullName>
        <formula>HYPERLINK(&quot;/apex/AwardView?id=&quot;&amp;Award__c,AwardID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardID__c</fullName>
        <formula>Award__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardTitle__c</fullName>
        <formula>Award__r.GrantAwardName__c</formula>
        <label>Award Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardVersionNumber__c</fullName>
        <label>Award Version Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>PaymentRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardedAmount__c</fullName>
        <label>Awarded Amount</label>
        <summarizedField>PaymentBudgetCategory__c.AwardedBudget__c</summarizedField>
        <summaryForeignKey>PaymentBudgetCategory__c.PaymentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BasisOfRequest__c</fullName>
        <description>This field is used in Request for Advance or Reimbursement</description>
        <label>Basis Of Request</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingEndDate__c</fullName>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingStartDate__c</fullName>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <formula>Award__r.BudgetStartEndDate__c</formula>
        <label>Budget Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CatchUp__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Catch Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckNumber__c</fullName>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNs__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DatePaid__c</fullName>
        <label>Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSubmitted__c</fullName>
        <label>Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeadLine__c</fullName>
        <label>DeadLine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisplayDelButton__c</fullName>
        <formula>IF( (Award__r.SubAwardee__r.Id == $User.Id &amp;&amp; TEXT( Status__c ) == &apos;In Progress&apos; &amp;&amp;  TEXT(Type__c) == &apos;Advance&apos; ) , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayDelButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayEditButton__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Approved&apos;),AND(ISPICKVAL(Status__c,&apos;Submitted to Grantor&apos;),TEXT( $User.UserType )=&apos;PowerPartner&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <formula>IF( (DeadLine__c)&gt; TODAY() ,(DeadLine__c) - TODAY(),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.EINText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployerIdentificationNumber__c</fullName>
        <label>Employer Identification Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrgName__c</fullName>
        <label>External Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UOVC</fullName>
                </value>
                <value>
                    <fullName>USBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINETAmount__c</fullName>
        <label>FINET Amount</label>
        <summarizedField>PaymentFINETCode__c.RequestedAmount__c</summarizedField>
        <summaryForeignKey>PaymentFINETCode__c.PaymentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FederalCashRemaining__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is used in payment request form.</description>
        <label>Federal Cash Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalGrantNumber__c</fullName>
        <description>Federal grant or other identifying number assigned number for this request by federal agency.</description>
        <inlineHelpText>Federal grant or other identifying number assigned number for this request by federal agency.</inlineHelpText>
        <label>Grant Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalSponsoringAgency__c</fullName>
        <description>Federal sponsoring agency and organizational element to which this report is submitted.</description>
        <inlineHelpText>Federal sponsoring agency and organizational element to which this report is submitted.</inlineHelpText>
        <label>Sponsoring Agency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinalPaymentRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Payment Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancialAssistanceIdentificationNo__c</fullName>
        <description>This field is used in Request for Advance or Reimbursement.</description>
        <label>Financial Assistance Identification No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiscalOfficer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forms Validated ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrantAdministrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantHyper__c</fullName>
        <formula>HYPERLINK(&quot;/apex/GrantView?id=&quot; &amp;Grant__c, GrantID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantID__c</fullName>
        <formula>Grant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantMonitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Monitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantNumber__c</fullName>
        <formula>Grant__r.GrantNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantType__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeMatchSpent__c</fullName>
        <formula>TotalMatchSpent__c/(TotalMatchSpent__c+NetAmountthisAction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Match Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GranteePOC__c</fullName>
        <formula>Grant__r.GranteePOC__r.LastName</formula>
        <label>Grantee POC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantorPOC__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.PointofContactUser__c</formula>
        <label>Grantor POC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideAdvanceGrid__c</fullName>
        <formula>If(TEXT(Type__c) = &apos;Reimbursement&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAdvanceGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideCTE__c</fullName>
        <formula>NOT(ISPICKVAL(Award__r.Grant__r.Program__r.ProgramBudgetTypeUSBE__c, &apos;CTE&apos;)) || NOT(ISPICKVAL(Type__c, &apos;Reimbursement&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide CTE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeletes__c</fullName>
        <formula>IF(TEXT(Status__c)==&apos;Created&apos;,False,True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideDeletes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEdit__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c, &apos;Created&apos;),ISPICKVAL(Status__c, &apos;Change Requested&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideExpenseGrid__c</fullName>
        <formula>If(TEXT(Type__c) = &apos;Advance&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideExpenseGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideGMButton__c</fullName>
        <formula>IF((TEXT(Status__c) = &apos;Rejected by Project Officer&apos; || TEXT(Status__c) = &apos;Rejected by Program Manager&apos; || TEXT(Status__c) = &apos;Submitted&apos;) &amp;&amp;  GrantMonitor__r.Id ==  $User.Id, false, true )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideGMButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNotUSBEWaiver__c</fullName>
        <formula>NOT(HideUSBEWaiver__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideNotUSBEWaiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNotWaiverCTE__c</fullName>
        <formula>HideNotUSBEWaiver__c || ISPICKVAL(Award__r.Grant__r.Program__r.ProgramBudgetTypeUSBE__c, &apos;CTE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Not Waiver CTE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePageMessage__c</fullName>
        <formula>If( (Award__r.SubAwardee__c ==  $User.Id &amp;&amp;  TEXT(Status__c)==&apos;Submitted&apos;) || ( GrantMonitor__r.Id  ==  $User.Id &amp;&amp;  TEXT(Status__c)==&apos;Approved By Grant Monitor&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidePageMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePaymentDetails__c</fullName>
        <formula>OR(ISPICKVAL(Status__c, &apos;Created&apos;),ISPICKVAL(Status__c, &apos;Submitted to Grantor&apos;),ISPICKVAL(Status__c, &apos;Approved By Fiscal Manager&apos;),ISPICKVAL(Status__c, &apos;Approved by Program Manager&apos;))</formula>
        <label>HidePaymentDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmitRequest__c</fullName>
        <formula>OR( ISPICKVAL( Status__c , &apos;Submitted to Grantor&apos;),ISPICKVAL( Status__c , &apos;Approved By Fiscal Manager&apos;),ISPICKVAL( Status__c , &apos;Approved by Program Manager&apos;),ISPICKVAL( Status__c , &apos;Approved&apos;),TEXT($User.UserType) == &apos;Standard&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Submit Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUOVC__c</fullName>
        <formula>OrganizationName__c != &apos;UOVC&apos; || NOT(ISPICKVAL(Type__c, &apos;Reimbursement&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide UOVC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUSBECurrent__c</fullName>
        <formula>OrganizationName__c != &apos;USBE&apos; || ISPICKVAL(Type__c, &apos;Waiver&apos;) || NOT(ISPICKVAL(AccountingMethod__c,&apos;Current Expenditures&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUSBECurrent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUSBEWaiver__c</fullName>
        <formula>OrganizationName__c != &apos;USBE&apos; || NOT(ISPICKVAL(Type__c, &apos;Waiver&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide USBE Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUSBE__c</fullName>
        <formula>OrganizationName__c != &apos;USBE&apos; || NOT(ISPICKVAL(Type__c, &apos;Reimbursement&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide USBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndirectCumulative__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndirectCurrent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndirectQ1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IndirectQ1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndirectQ2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IndirectQ2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndirectQ3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IndirectQ3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indirect__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalRejectComment__c</fullName>
        <label>Internal Reject Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalSendBackComment__c</fullName>
        <label>Internal Send Back Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoicePeriod__c</fullName>
        <formula>IF(AND(NOT(ISBLANK( BillingStartDate__c )),NOT(ISBLANK( BillingEndDate__c ))),TEXT(MONTH( BillingStartDate__c  ))+&quot;/&quot; +TEXT(DAY(BillingStartDate__c ))+&quot;/&quot; +TEXT(YEAR(BillingStartDate__c ))+&quot;--&quot;+ TEXT(MONTH( BillingEndDate__c  ))+&quot;/&quot; +TEXT(DAY(BillingEndDate__c ))+&quot;/&quot; +TEXT(YEAR(BillingEndDate__c )),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsFinalPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Final PR ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecordRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecordRecalled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWaiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEAName__c</fullName>
        <formula>Award__r.Application__r.ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSPPaymentSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSP Payment Schedule</label>
        <referenceTo>MSPPaymentSchedule__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSPTotal__c</fullName>
        <formula>PaymentAmount__c + CatchUp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSPTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;PR-&apos;+ Grant__r.GrantAbbreviation__c +&apos;-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetAmountthisAction__c</fullName>
        <label>Net Amount this Action</label>
        <summarizedField>PaymentBudgetCategory__c.NetPayment__c</summarizedField>
        <summaryForeignKey>PaymentBudgetCategory__c.PaymentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherSupportingDoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Supporting Docs available at Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaidAmount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaidDateTime__c</fullName>
        <label>Paid Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PaidDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartialPaymentRequestNumber__c</fullName>
        <description>Partial payment request number for this request.</description>
        <inlineHelpText>Partial payment request number for this request.</inlineHelpText>
        <label>Partial Payment Request Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartialPaymentRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Payment Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentReference__c</fullName>
        <label>Payment Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentRequestCreation__c</fullName>
        <label>Payment Request Creation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Unplanned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentRequestSetting__c</fullName>
        <label>PaymentRequestSetting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <formula>Grant__r.Program__r.ProgramName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests9</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>